[package]
name = "petools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.14.0"
structopt = "0.3.26"
ddsfile = "0.5.2"
texpresso = "2.0.1"
bitflags = { version = "2.6.0", features = ["serde"] }
